2017-01-27  Bernd Schmidt  <bschmidt@redhat.com>

	PR rtl-optimization/79194
	* gcc.dg/torture/pr79194.c: New test.

2017-01-27  Vladimir Makarov  <vmakarov@redhat.com>

	PR tree-optimization/71374
	* testsuite/gcc.target/i386/pr71374.c: New.

2017-01-27  Martin Sebor  <msebor@redhat.com>

	PR c++/71290
	* obj-c++.dg/property/at-property-23.mm: Remove an escaped newline from
	a dg-error directive.

2017-01-27  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/79131
	* gcc.target/arm/pr79131.c: Rename to gcc.target/arm/pr79131-1.c.
	* gcc.target/arm/pr79131-2.c: New.

2017-01-27  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR target/65484
	* g++.dg/vect/pr36648.cc: Modify to reflect that the loop is not
	vectorized on POWER unless hardware misaligned loads are
	available.

2017-01-27  Bin Cheng  <bin.cheng@arm.com>

	PR rtl-optimization/78559
	* gcc.c-torture/execute/pr78559.c: New test.

2017-01-27  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/79245
	* gcc.dg/tree-ssa/ldist-23.c: XFAIL.
	* gcc.dg/tree-ssa/ldist-25.c: New testcase.

2017-01-27  Jakub Jelinek  <jakub@redhat.com>

	PR c/79199
	* c-c++-common/Wduplicated-branches-13.c: Require int32plus effective
	target.  Use 4294967293U instead of 4294967293.

2017-01-27  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/71433
	* gcc.dg/Warray-bounds-21.c: New testcase.

2017-01-27  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/79244
	* gcc.dg/torture/pr79244.c: New testcase.

2017-01-27  Jakub Jelinek  <jakub@redhat.com>

	* g++.dg/cilk-plus/CK/fib-opr-overload.cc (main): Change
	all occurrences of 40 to 32.

2017-01-27  Richard Earnshaw  <rearnsha@arm.com>

	PR target/79239
	* gcc.target/arm/pr79239.c: New test.

2017-01-27  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* gcc.target/s390/md/setmem_long-1.c: Remove xfail, skip with -O0.

2017-01-27  Adam Butcher  <adam@jessamine.co.uk>

	PR c++/64382
	* g++.dg/cpp1y/pr64382.C: New test.
